# WorldCup-Edge-Lab

./: .gitignore  LICENSE  README.md  pyproject.toml
Dataset/: countries_names.csv  elo_ratings_current.csv  fifa_rankings_current.csv  world_cup_2026_managers.csv  world_cup_2026_squads.csv  world_cup_goals.csv  world_cup_matches.csv
artifacts/ablations/baseline/: feature_schema.json  model.ckpt
artifacts/ablations/no_aux_class/: model.ckpt
artifacts/ablations/no_era_scaling/: model.ckpt
artifacts/ablations/no_recency/: model.ckpt
artifacts/ablations/no_swap/: feature_schema.json  model.ckpt
artifacts/experiments/blend_old_hparams/: feature_schema.json  model.ckpt
artifacts/experiments/direct_old_hparams/: model.ckpt
artifacts/experiments/external_w005/: feature_schema.json  model.ckpt
artifacts/experiments/improved_v1/: model.ckpt
artifacts/experiments/no_external/: feature_schema.json  model.ckpt
artifacts/v1/: feature_schema.json  model.ckpt
configs/: v1.yaml
reports/: ablation_v1.json  feature_importance.json  model_metrics.json
reports/ablations/baseline/: model_metrics.json
src/worldcup2026/: __init__.py  ablation.py  cli.py  config.py  constants.py  data.py  features.py  importance.py  model.py  predict.py  schemas.py  simulation.py  team_names.py  trading.py  training.py
tests/: test_data.py  test_features.py  test_simulation.py  test_trading.py
trading_ledger/: README.md
trading_ledger/group_stage_round_1/: match_001_mexico_vs_south_africa.md  match_002_korea_republic_vs_czechia.md  summary.csv
(+9 files in other folders)
