[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worldcup2026"
version = "0.1.0"
description = "PyTorch World Cup 2026 prediction-market research pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "joblib>=1.3",
  "lightning>=2.2",
  "numpy>=1.26",
  "optuna>=3.6",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "torch>=2.2",
  "torchmetrics>=1.3",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
worldcup2026 = "worldcup2026.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

